tests/errors/pat_variant_fun_without_payload_err/pat_variant_fun_without_payload_err.c
#error pat_variant_fun_without_payload_err:13:5 Some pattern must be used in the form of: `Some pattern`.
#error pat_variant_fun_without_payload_err:17:5 Variant with payload must be used in the form of: `Variant pattern`.
